# codeedu

./: .all-contributorsrc  .dockerignore  Dockerfile  LLM_summary.txt  LLM_tutor.md  Python_2023_Report.md  README.md  build_and_run.sh  pyproject.toml  ranking_algorithm.py  ranking_results.json  report.md  report_test.md  requirements.txt  try.ipynb
api_test/: agent_pool.py  app.py  test_server.py
api_test/conversations/: 128367fc-489b-4a27-841a-34ad7f068140.json  45e2f4b5-e8e2-4af4-b458-a4eebee00d17.json  4f4a8a9d-c24e-4e20-9bdf-3b4ec4e40b98.json  f6f0815d-864e-423c-95cb-c96da2d3720c.json  f6f0815d-864e-423c-95cb-c96da2d3720c.meta.json  xyz456.json  your_conversation_id.json
frontend/: package-lock.json  package.json
frontend/public/: index.html  patient1.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: scrollbar.css
frontend/src/components/: Chatbot.vue  Coding.vue  FileDownload.vue  History.vue  Home.vue  Info.vue  Login.vue  Main.vue  ReportComponent.vue  camera.vue  standby.vue  test.vue  try.vue  try1.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
src/: asd.py  package-lock.json
src/codeedu/: agent_pool.py  app copy.py  app.py  app_developing.py  crew.py  echo_user_input.py  llm_summary.txt  main.py  prompt.md  prompt.txt  python_report_2023.txt  pytorch_tensors_description.txt  report_test.md  survey.py  task.py  test.py  test2.py  utils.py
src/codeedu/config/: agents.yaml  paths.py  tasks.yaml
src/codeedu/conversations/: 0618dd9d-8659-428d-ad2d-2154212681d2.json  abc123.json  (+36 more)
(+50 files in other folders)
