[project]
name = "codeedu"
version = "0.1.0"
description = "CodeEdu using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "docker>=7.1.0",
    "kickoff>=0.5.11",
]

[project.scripts]
codeedu = "codeedu.main:run"
kickoff = "codeedu.main:kickoff"
run_crew = "codeedu.main:run"
train = "codeedu.main:train"
replay = "codeedu.main:replay"
test = "codeedu.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

